# Auto-Crypto-Tradingjournal

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md  SECURITY.md  agent_chart_draw.py  agent_data_collector.py  agent_data_interpreter.py  agent_data_reviewer.py  agent_market_sentiment.py  agent_orchestrator.py  agent_risk_mgmt.py  agent_trade_monitor.py  agent_trade_prep.py  agent_types.py  ai_advisor.py  ai_call.py  ai_call_analyzer.py  ai_client.py  ai_hindsight.py  ai_limit.py  ai_live_trade.py  ai_pattern_detector.py  ai_rulebook.py  ai_scanner.py  ai_trade_grader.py  analytics.py  app.js  app.py  auto-trader.service  backtest_engine.py  backtest_metrics.py  backtest_optimizer.py  bitget_client.py  bitget_sync.py  blofin_client.py  blofin_sync.py  ccxt_client.py  (+54 more)
config/: default.yaml  exchange.yaml.template  llm.yaml
core/: __init__.py  config_loader.py  daemon.py  database.py  enzyme.py  exchange.py  fees.py  outcome_recorder.py  position_sizing.py  replay_driver.py  replay_exchange.py  scheduler.py  substrate.py  trailing_stop.py  virtual_clock.py
docs/: AutoTraderSoftPenalties.yaml  GUIDE.md  PAPER-LEARNING-TEST-V2.md  PAPER-LEARNING-TEST.md  RATING_CRITERIA.md  README_BACKTEST_ANALYZER.md  README_EXPORT_TRADES.md  README_TIME_TRAVEL.md  RESUME_PROMPT.md  ReactionNetworkModel.md  SCORING_GUIDE.md  SOUL.md  USER_GUIDE.md  architecture.md  telegram-hermes-guide.md
enzymes/: __init__.py  approve_exit.py  approve_trade.py  collect_external_signals.py  collect_macro_context.py  collect_ohlcv.py  collect_pre_trade_context.py  detect_noise.py  (+15 more)
(+317 files in other folders)
