[project]
name = "auto-crypto-tradingjournal"
version = "2.0.0"
description = "Autonomous crypto trading journal with reaction-design architecture"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.3",
    "anthropic>=0.103.1",
    "openai>=2.37.0",
    "pandas>=3.0.3",
    "matplotlib>=3.10.9",
    "ccxt>=4.5.54",
    "optuna>=4.9.0",
    "joblib>=1.5.3",
    "scikit-learn>=1.8.0",
    "xgboost>=3.2.0",
    "pyyaml>=6.0.0",
    "yfinance>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "backtester-mcp>=0.1.0",
]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests that require real network/API access (deselect with '-m not integration')",
]
testpaths = ["tests"]
addopts = "-v --tb=short"